[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/EnemySpawnController.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/EnemyPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/PlayerController.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Level.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 24, 0, 0, 0, 0, 0, 24, 48, 0, 0, 0, 0, 72, 48, 0, 0, 0, 0, 72, 88, 0, 0, 0, 0, 144, 88, 0, 0, 0, 0, 560, 88, 0, 0, 0, 0, 560, 200, 0, 0, 0, 0, 120, 200, 0, 0, 0, 0, 120, 420 )
}

[node name="TestLevel" type="Node2D"]
script = ExtResource( 4 )

[node name="EnemyPath" parent="." instance=ExtResource( 2 )]
curve = SubResource( 1 )

[node name="PlacementArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlacementArea"]
polygon = PoolVector2Array( 0, 0, 8, 0, 8, 64, 56, 64, 56, 104, 544, 104, 544, 184, 104, 184, 104, 360, 136, 360, 136, 216, 576, 216, 576, 72, 88, 72, 88, 32, 40, 32, 40, 0, 640, 0, 640, 400, 0, 400 )

[node name="PlayerController" parent="." instance=ExtResource( 3 )]

[node name="EnemySpawnController" parent="." instance=ExtResource( 1 )]

[editable path="EnemyPath"]
